--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.5.4",
+    "lucide-react": "^0.441.0",
     "next": "14.2.8",
     "odometer": "^0.4.8",
     "phosphor-react": "^1.4.1",
