--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "sharp": "^0.33.5",
     "swiper": "^11.1.12"
   },
@@ -23,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
