--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-select": "^5.8.1",
     "react-vertical-timeline-component": "^3.6.0",
     "sharp": "^0.33.5",
     "swiper": "^11.1.12"
